[package]
name = "danmaku-machine"
version = "0.1.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.10", features = ["async-tls", "async-std-runtime"] }
async-std = { version = "1.6.5", features = ["attributes"] }
futures = "0.3"
url = "2.0.0"
anyhow = "1.0.33"
log = "0.4"
env_logger = "0.6"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.2"
hex-literal = "0.3.1"
libflate = "1.0.2"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
iced = { path = "../iced-master", features = ["async-std"] }
font-kit = "0.10"
once_cell = "1.4.1"

